# my-room-sensor

./: README.md  compose.yaml  compose_dev.yaml
grafana/dashboard-settings/: default.yml
grafana/dashboards/: main.json
grafana/datasources/: config.yml
sensor/: Cargo.toml  Dockerfile  build.sh
sensor/src/: bme680.rs  cache.rs  influx_db.rs  lib.rs  main.rs  mh_z19.rs  notification.rs  sensors.rs
