[package]
name = "my-room-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.2"
bme680 = { git = "https://github.com/marcelbuesing/bme680", rev = "4fd1a72" }
embedded-hal = "=1.0.0-alpha.5"
log = "0.4"
serde = { version = "1.0", optional = true, default-features = false }
env_logger = "0.9"
futures = { version = "0.3" }
i2cdev = "0.5"
influx_db_client = { version = "0.5", default-features = false, features = [
  "rustls-tls",
] }
tokio = { version = "1.5", features = ["full"] }
url = "2.1"
linux-embedded-hal = "0.4.0-alpha.1"
serialport = "4.3.0"
influxdb = "0.7.2"
async-trait = "0.1.80"
chrono = "0.4.38"
